2010-07-26  Steve Block  <steveblock@google.com>

Reviewed by Jeremy Orlow.

        DeviceOrientation event listeners should never be called synchronously from addEventListener()
        https://bugs.webkit.org/show_bug.cgi?id=42304

        No new tests as there are currently no implementations to test. Tests will be
        added once LayoutTestController methods for providing a mock implementation are
        in place, see Bug 39589.

        * dom/DeviceOrientationController.cpp:
        (WebCore::DeviceOrientationController::DeviceOrientationController):
        (WebCore::DeviceOrientationController::timerFired):
        (WebCore::DeviceOrientationController::addListener):
        (WebCore::DeviceOrientationController::removeListener):
        (WebCore::DeviceOrientationController::removeAllListeners):
        * dom/DeviceOrientationController.h:


Canonical link: https://commits.webkit.org/54880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64048 268f45cc-cd09-0410-ab3c-d52691b4dbfc